changed id to classes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <button id="one">Projects</button>
-    <button id="two">Contact</button>
+    <button class="two">Contact</button>
+    <button class="two">About me</button>
 </body>
 </html>
